apps/vaultwarden/components/ingress-nginx/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  ingressClassName: nginx
  rules:
    - host: pass.rbn.is
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
  tls:
    - hosts:
        - pass.rbn.is
      secretName: cert-vaultwarden
